also included the res dir

--- a/src/android-client/app/src/main/res/values/strings.xml
+++ b/src/android-client/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">android-client</string>
+    <string name="app_name">Netflix</string>
+    <string name="signup_title">Sign Up</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="button_sign_up">Sign Up</string>
+    <string name="upload_photo">Upload Photo</string>
+    <string name="user_name">Username</string>
+
 </resources>
