Home page no login users

--- a/src/android-client/app/src/main/res/values/strings.xml
+++ b/src/android-client/app/src/main/res/values/strings.xml
@@ -10,5 +10,10 @@
     <string name="button_login_in">Log in</string>
     <string name="upload_photo">Upload Photo</string>
     <string name="user_name">Username</string>
+    <string name="home_page_no_login_title">Explore movies </string>
+    <string name="home_page_no_login_sub_title">Watch anywhere , Cancel anytime. </string>
+    <string name="home_page_no_login_ready_to">Ready to watch? Click on the buttons below </string>
+
+
 
 </resources>
