--- a/src/android-client/app/src/main/res/values/strings.xml
+++ b/src/android-client/app/src/main/res/values/strings.xml
@@ -33,5 +33,9 @@
     <string name="create_category">Create Category</string>
     <string name="category_name_hint">Enter Category Name</string>
     <string name="promoted">Promoted</string>
+    <string name="place_holder">place_holder</string>
+    <string name="rating">Rating:</string>
+    <string name="watch_now">Watch Now</string>
+    <string name="close">close</string>
 
 </resources>
