add support for update and delete movies and categories

--- a/src/android-client/app/src/main/res/values/strings.xml
+++ b/src/android-client/app/src/main/res/values/strings.xml
@@ -18,10 +18,11 @@
     <string name="nav_header_desc">Navigation header</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_create_movie">Create Movie</string>
-    <string name="menu_create_category">Create Category</string>
+    <string name="menu_movie_admin">Movie Admin</string>
+    <string name="menu_category_admin">Category Admin</string>
     <string name="menu_search">Search</string>
-    <string name="create_movie">Create Movie</string>
+
+    <string name="movie_admin">Movie Admin</string>
     <string name="movie_name_hint">Enter movie name</string>
     <string name="movie_description_hint">Enter movie description</string>
     <string name="movie_length_hint">Enter movie length</string>
@@ -29,11 +30,16 @@
     <string name="movie_release_year_hint">Enter release year</string>
     <string name="movie_file_hint">Choose Movie File</string>
     <string name="movie_thumbnail_hint">Choose Thumbnail File</string>
-    <string name="submit">Submit</string>
-    <string name="create_category">Create Category</string>
+    <string name="movie_id_hint">Enter movie ID, or leave empty for new one</string>
+
+    <string name="category_admin_title">Category Admin</string>
     <string name="category_name_hint">Enter Category Name</string>
     <string name="promoted">Promoted</string>
+    <string name="movie_categories_hint">Enter comma separated list of categories ID</string>
+    <string name="category_id_hint">Enter category ID, or leave empty for new one</string>
+
     <string name="required">Required</string>
-    <string name="movie_categories_hint">Enter comma seperated list of categories ID</string>
+    <string name="delete">Delete</string>
+    <string name="create_or_update">Create/Update</string>
 
 </resources>
