--- a/src/android-client/app/src/main/res/values/strings.xml
+++ b/src/android-client/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Netflix</string>
+    <string name="app_name">NextFelix</string>
     <string name="signup_title">Sign Up</string>
     <string name="sing_in_title">Welcome</string>
     <string name="first_name">First Name</string>
@@ -13,8 +13,8 @@
     <string name="title_activity_admin">AdminActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Netflix</string>
-    <string name="nav_header_subtitle">streaming app</string>
+    <string name="nav_header_title">NextFelix</string>
+    <string name="nav_header_subtitle">next-gen streaming app</string>
     <string name="nav_header_desc">Navigation header</string>
 
     <string name="menu_home">Home</string>
