--- a/src/android-client/app/src/main/res/values/strings.xml
+++ b/src/android-client/app/src/main/res/values/strings.xml
@@ -54,6 +54,8 @@
     <string name="home_page_no_login_sub_title">Watch anywhere , Cancel anytime. </string>
     <string name="home_page_no_login_ready_to">Ready to watch? Click on the buttons below </string>
     <string name="dark_light_mode">Dark/Light Mode</string>
+    <string name="fullscreen">Fullscreen</string>
+    <string name="recommendations">Recommendations</string>
 
 
 </resources>
